Visualização de um usuário com descrição no Swagger
