# routes/api.php
@@ -18,3 +18,4 @@ use Illuminate\Support\Facades\Route;
 */
 
 Route::get('/users', [UserController::class, 'index'])->name('users.list');
+Route::get('/users/{id}', [UserController::class, 'show'])->name('user.show');
